--- a/.github/workflows/flake8.yaml
+++ b/.github/workflows/flake8.yaml
@@ -14,5 +14,5 @@ jobs:
     - name: Install dependencies
       run: python -m pip install discord.py flake8
     - name: Run flake8
-      run: flake8 --ignore=E302,E501
+      run: flake8
 
